--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings | 网站设置
-title: RainbomSea
-SEOTitle: RainbomSea的博客 | RaimbomSea
+title: CaptainJay
+SEOTitle: CaptainJay的博客 | CaptainJay
 header-img: img/home-bg-he.png
-email: RainbomSea@qq.com
-description: "RainbomSea的博客"
-keyword: "RainbomSea, RainbomSea的博客, rainbom sea, rainbomsea, Python blog"
-url: "http://RainbomSea.github.io"          # your host, for absolute URL
+email: xxxxxx@qq.com
+description: "CaptainJay的博客"
+keyword: "CaptainJay, CaptainJay的博客, Captain Jay, CaptainJay, web blog"
+url: "http://captainjay.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/RainbomSea/RainbomSea.github.io.git" #code repository | 代码仓库
+github_repo: "https://github.com/CaptainJay/CaptainJay.github.io.git" #code repository | 代码仓库
 
 
 # Sidebar settings | 侧边栏设置
@@ -20,10 +20,10 @@ sidebar-avatar: /img/head.jpg      # 头像
 
 
 # SNS settings | 社交网络设置
-facebook_username: rainbom.z
-github_username: RainbomSea
-zhihu_username: RainbomSea
-csdn_username: qq_39268193
+facebook_username: xxx.z
+github_username: xxxxx
+zhihu_username: xxxxxx
+csdn_username: xxxxx
 
 
 
@@ -64,8 +64,8 @@ gitalk:
   clientID: 99ecf1fdc9b7e357ebb7                            #生成的clientID
   clientSecret: a866f00709e418ffd35d9986e130ff7f01a3cba2    #生成的clientSecret
   repo: RainbomSea.github.io    #仓库名称
-  owner: RainbomSea    # github用户名
-  admin: RainbomSea
+  owner: captainjay    # github用户名
+  admin: captainjay
   distractionFreeMode: true # 是否启用类似FB的阴影遮罩
 
 
