--- a/_config.yml
+++ b/_config.yml
@@ -97,8 +97,8 @@ friends: [
         title: "CSDN·CaptionJay",
         href: "http://CaptionJay.github.io"
     },{
-        title: "知乎·CaptionJay",
-        href: "http://CaptionJay.github.io"
+        title: "知乎·capppptain",
+        href: "https://www.zhihu.com/people/capppptain/activities"
     },{
         title: "GitBook·CaptionJay",
         href: "http://CaptionJay.github.io"
